// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KuiLinkButton Baseline HTML attributes are rendered (and disabled renders a class) 1`] = `
<a
  aria-label="aria label"
  class="kuiButton testClass1 testClass2 kuiButton-isDisabled"
  data-test-subj="test subject string"
  href="#"
  target="_blank"
  type="submit"
>
  <span
    class="kuiButton__inner"
  />
</a>
`;

exports[`KuiLinkButton Baseline is rendered 1`] = `
<a
  aria-label="aria label"
  class="kuiButton"
>
  <span
    class="kuiButton__inner"
  />
</a>
`;

exports[`KuiLinkButton Props buttonType basic renders the basic class 1`] = `
<a
  aria-label="aria label"
  class="kuiButton kuiButton--basic"
>
  <span
    class="kuiButton__inner"
  />
</a>
`;

exports[`KuiLinkButton Props buttonType danger renders the danger class 1`] = `
<a
  aria-label="aria label"
  class="kuiButton kuiButton--danger"
>
  <span
    class="kuiButton__inner"
  />
</a>
`;

exports[`KuiLinkButton Props buttonType hollow renders the hollow class 1`] = `
<a
  aria-label="aria label"
  class="kuiButton kuiButton--hollow"
>
  <span
    class="kuiButton__inner"
  />
</a>
`;

exports[`KuiLinkButton Props buttonType primary renders the primary class 1`] = `
<a
  aria-label="aria label"
  class="kuiButton kuiButton--primary"
>
  <span
    class="kuiButton__inner"
  />
</a>
`;

exports[`KuiLinkButton Props buttonType secondary renders the secondary class 1`] = `
<a
  aria-label="aria label"
  class="kuiButton kuiButton--secondary"
>
  <span
    class="kuiButton__inner"
  />
</a>
`;

exports[`KuiLinkButton Props buttonType warning renders the warning class 1`] = `
<a
  aria-label="aria label"
  class="kuiButton kuiButton--warning"
>
  <span
    class="kuiButton__inner"
  />
</a>
`;

exports[`KuiLinkButton Props children is rendered 1`] = `
<a
  class="kuiButton"
>
  <span
    class="kuiButton__inner"
  >
    <span>
      Hello
    </span>
  </span>
</a>
`;

exports[`KuiLinkButton Props icon is rendered with children 1`] = `
<a
  class="kuiButton kuiButton--iconText"
>
  <span
    class="kuiButton__inner"
  >
    Icon
    <span>
      Hello
    </span>
  </span>
</a>
`;

exports[`KuiLinkButton Props icon is rendered without children 1`] = `
<a
  aria-label="aria label"
  class="kuiButton kuiButton--iconText"
>
  <span
    class="kuiButton__inner"
  >
    Icon
  </span>
</a>
`;

exports[`KuiLinkButton Props iconPosition moves the icon to the right 1`] = `
<a
  class="kuiButton kuiButton--iconText"
>
  <span
    class="kuiButton__inner"
  >
    <span>
      Hello
    </span>
    Icon
  </span>
</a>
`;

exports[`KuiLinkButton Props isLoading doesn't render the icon prop 1`] = `
<a
  aria-label="aria label"
  class="kuiButton kuiButton--iconText"
>
  <span
    class="kuiButton__inner"
  >
    <span
      aria-hidden="true"
      class="kuiButton__icon kuiIcon fa-spinner fa-spin"
    />
  </span>
</a>
`;

exports[`KuiLinkButton Props isLoading renders a spinner 1`] = `
<a
  aria-label="aria label"
  class="kuiButton kuiButton--iconText"
>
  <span
    class="kuiButton__inner"
  >
    <span
      aria-hidden="true"
      class="kuiButton__icon kuiIcon fa-spinner fa-spin"
    />
  </span>
</a>
`;
